--- a/experimentation/vae/vae.ipynb
+++ b/experimentation/vae/vae.ipynb
@@ -267,13 +267,13 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0.5003, 0.4999, 0.4998,  ..., 0.3285, 0.0500, 1.0000],\n",
-       "        [0.4996, 0.5002, 0.5004,  ..., 0.5566, 0.0500, 0.0000],\n",
-       "        [0.5004, 0.4996, 0.5003,  ..., 0.7581, 0.0500, 1.0000],\n",
+       "tensor([[0.4997, 0.5003, 0.5001,  ..., 0.7170, 0.0500, 1.0000],\n",
+       "        [0.4998, 0.4997, 0.5001,  ..., 0.7471, 0.0500, 1.0000],\n",
+       "        [0.5004, 0.4996, 0.5000,  ..., 0.4649, 0.0500, 1.0000],\n",
        "        ...,\n",
-       "        [0.4999, 0.5003, 0.5004,  ..., 0.4803, 0.0500, 1.0000],\n",
-       "        [0.5002, 0.5003, 0.4997,  ..., 0.6488, 0.0500, 1.0000],\n",
-       "        [0.4996, 0.5004, 0.4998,  ..., 0.3857, 0.0500, 1.0000]])"
+       "        [0.4998, 0.4999, 0.4996,  ..., 0.3172, 0.0500, 1.0000],\n",
+       "        [0.5000, 0.4999, 0.5003,  ..., 0.3409, 0.0500, 1.0000],\n",
+       "        [0.5004, 0.5003, 0.4995,  ..., 0.3785, 0.0500, 1.0000]])"
       ]
      },
      "execution_count": 14,
@@ -310,62 +310,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: UNBALANCED, -- Epoch: 0, Loss: 7.352310172271729\n",
-      "Model: UNBALANCED, -- Epoch: 1, Loss: 6.965100649261474\n",
-      "Model: UNBALANCED, -- Epoch: 2, Loss: 6.913480811309815\n",
-      "Model: UNBALANCED, -- Epoch: 3, Loss: 6.908803099822998\n",
-      "Model: UNBALANCED, -- Epoch: 4, Loss: 6.907642743682861\n",
-      "Model: UNBALANCED, -- Epoch: 5, Loss: 6.907385063934326\n",
-      "Model: UNBALANCED, -- Epoch: 6, Loss: 6.906303978729248\n",
-      "Model: UNBALANCED, -- Epoch: 7, Loss: 6.9038803688049315\n",
-      "Model: UNBALANCED, -- Epoch: 8, Loss: 6.905945542907715\n",
-      "Model: UNBALANCED, -- Epoch: 9, Loss: 6.903897920227051\n",
-      "Model: UNBALANCED, -- Epoch: 10, Loss: 6.904113362884521\n",
-      "Model: UNBALANCED, -- Epoch: 11, Loss: 6.903572537994385\n",
-      "Model: UNBALANCED, -- Epoch: 12, Loss: 6.902415406036377\n",
-      "Model: UNBALANCED, -- Epoch: 13, Loss: 6.905242055511475\n",
-      "Model: UNBALANCED, -- Epoch: 14, Loss: 6.903033055114746\n",
-      "Model: UNBALANCED, -- Epoch: 15, Loss: 6.901678163909912\n",
-      "Model: UNBALANCED, -- Epoch: 16, Loss: 6.902179975891113\n",
-      "Model: UNBALANCED, -- Epoch: 17, Loss: 6.90313540725708\n",
-      "Model: UNBALANCED, -- Epoch: 18, Loss: 6.902305689239502\n",
-      "Model: UNBALANCED, -- Epoch: 19, Loss: 6.903133451843262\n",
-      "Model: UNBALANCED, -- Epoch: 20, Loss: 6.902686466217041\n",
-      "Model: UNBALANCED, -- Epoch: 21, Loss: 6.902537525939941\n",
-      "Model: UNBALANCED, -- Epoch: 22, Loss: 6.901059043121338\n",
-      "Model: UNBALANCED, -- Epoch: 23, Loss: 6.902439659118652\n",
-      "Model: UNBALANCED, -- Epoch: 24, Loss: 6.902319256591797\n",
-      "Model: UNBALANCED, -- Epoch: 25, Loss: 6.902334900665283\n",
-      "Model: UNBALANCED, -- Epoch: 26, Loss: 6.90155022354126\n",
-      "Model: UNBALANCED, -- Epoch: 27, Loss: 6.90108529586792\n",
-      "Model: UNBALANCED, -- Epoch: 28, Loss: 6.9011420707702635\n",
-      "Model: UNBALANCED, -- Epoch: 29, Loss: 6.901003652954102\n",
-      "Model: UNBALANCED, -- Epoch: 30, Loss: 6.902331275939941\n",
-      "Model: UNBALANCED, -- Epoch: 31, Loss: 6.902081000518799\n",
-      "Model: UNBALANCED, -- Epoch: 32, Loss: 6.901567808532715\n",
-      "Model: UNBALANCED, -- Epoch: 33, Loss: 6.902016423797607\n",
-      "Model: UNBALANCED, -- Epoch: 34, Loss: 6.902204558563232\n",
-      "Model: UNBALANCED, -- Epoch: 35, Loss: 6.901118521881103\n",
-      "Model: UNBALANCED, -- Epoch: 36, Loss: 6.901908491516113\n",
-      "Model: UNBALANCED, -- Epoch: 37, Loss: 6.902211849212646\n",
-      "Model: UNBALANCED, -- Epoch: 38, Loss: 6.902943647766113\n",
-      "Model: UNBALANCED, -- Epoch: 39, Loss: 6.90096407699585\n",
-      "Model: UNBALANCED, -- Epoch: 40, Loss: 6.902263023376465\n",
-      "Model: UNBALANCED, -- Epoch: 41, Loss: 6.902327052307129\n",
-      "Model: UNBALANCED, -- Epoch: 42, Loss: 6.902520169830322\n",
-      "Model: UNBALANCED, -- Epoch: 43, Loss: 6.903130174255371\n",
-      "Model: UNBALANCED, -- Epoch: 44, Loss: 6.900848609161377\n",
-      "Model: UNBALANCED, -- Epoch: 45, Loss: 6.9020842262268065\n",
-      "Model: UNBALANCED, -- Epoch: 46, Loss: 6.902359532165527\n",
-      "Model: UNBALANCED, -- Epoch: 47, Loss: 6.901546188354493\n",
-      "Model: UNBALANCED, -- Epoch: 48, Loss: 6.902500308990478\n",
-      "Model: UNBALANCED, -- Epoch: 49, Loss: 6.901958680725097\n"
+      "Model: unbalanced, -- Epoch: 0, Loss: 7.396879299163818\n",
+      "Model: unbalanced, -- Epoch: 1, Loss: 6.960768380737305\n",
+      "Model: unbalanced, -- Epoch: 2, Loss: 6.921837488555909\n",
+      "Model: unbalanced, -- Epoch: 3, Loss: 6.918156552124024\n",
+      "Model: unbalanced, -- Epoch: 4, Loss: 6.914938436889648\n",
+      "Model: unbalanced, -- Epoch: 5, Loss: 6.912212821960449\n",
+      "Model: unbalanced, -- Epoch: 6, Loss: 6.911855452728272\n",
+      "Model: unbalanced, -- Epoch: 7, Loss: 6.909564448547363\n",
+      "Model: unbalanced, -- Epoch: 8, Loss: 6.908937411499023\n",
+      "Model: unbalanced, -- Epoch: 9, Loss: 6.909049150848388\n",
+      "Model: unbalanced, -- Epoch: 10, Loss: 6.908322643280029\n",
+      "Model: unbalanced, -- Epoch: 11, Loss: 6.907444449615478\n",
+      "Model: unbalanced, -- Epoch: 12, Loss: 6.9084503532409665\n",
+      "Model: unbalanced, -- Epoch: 13, Loss: 6.907147788238525\n",
+      "Model: unbalanced, -- Epoch: 14, Loss: 6.90727671585083\n",
+      "Model: unbalanced, -- Epoch: 15, Loss: 6.908354907989502\n",
+      "Model: unbalanced, -- Epoch: 16, Loss: 6.907754125213623\n",
+      "Model: unbalanced, -- Epoch: 17, Loss: 6.908513623046875\n",
+      "Model: unbalanced, -- Epoch: 18, Loss: 6.907086061859131\n",
+      "Model: unbalanced, -- Epoch: 19, Loss: 6.908057302856445\n",
+      "Model: unbalanced, -- Epoch: 20, Loss: 6.907553409576416\n",
+      "Model: unbalanced, -- Epoch: 21, Loss: 6.906794032287598\n",
+      "Model: unbalanced, -- Epoch: 22, Loss: 6.907037171936035\n",
+      "Model: unbalanced, -- Epoch: 23, Loss: 6.908022940826416\n",
+      "Model: unbalanced, -- Epoch: 24, Loss: 6.907505459594726\n",
+      "Model: unbalanced, -- Epoch: 25, Loss: 6.907379951477051\n",
+      "Model: unbalanced, -- Epoch: 26, Loss: 6.907513182067871\n",
+      "Model: unbalanced, -- Epoch: 27, Loss: 6.906829040527343\n",
+      "Model: unbalanced, -- Epoch: 28, Loss: 6.9067392211914065\n",
+      "Model: unbalanced, -- Epoch: 29, Loss: 6.9070706504821775\n",
+      "Model: unbalanced, -- Epoch: 30, Loss: 6.906224658966065\n",
+      "Model: unbalanced, -- Epoch: 31, Loss: 6.907236269378662\n",
+      "Model: unbalanced, -- Epoch: 32, Loss: 6.907488774108887\n",
+      "Model: unbalanced, -- Epoch: 33, Loss: 6.9069193077087405\n",
+      "Model: unbalanced, -- Epoch: 34, Loss: 6.907268001556396\n",
+      "Model: unbalanced, -- Epoch: 35, Loss: 6.907097812652588\n",
+      "Model: unbalanced, -- Epoch: 36, Loss: 6.907079020690918\n",
+      "Model: unbalanced, -- Epoch: 37, Loss: 6.907332077789307\n",
+      "Model: unbalanced, -- Epoch: 38, Loss: 6.906392372131347\n",
+      "Model: unbalanced, -- Epoch: 39, Loss: 6.907515626525879\n",
+      "Model: unbalanced, -- Epoch: 40, Loss: 6.906801961517334\n",
+      "Model: unbalanced, -- Epoch: 41, Loss: 6.906815724182129\n",
+      "Model: unbalanced, -- Epoch: 42, Loss: 6.9067289268493655\n",
+      "Model: unbalanced, -- Epoch: 43, Loss: 6.907477624511719\n",
+      "Model: unbalanced, -- Epoch: 44, Loss: 6.906155792236328\n",
+      "Model: unbalanced, -- Epoch: 45, Loss: 6.907166407012939\n",
+      "Model: unbalanced, -- Epoch: 46, Loss: 6.906950325012207\n",
+      "Model: unbalanced, -- Epoch: 47, Loss: 6.906942729949951\n",
+      "Model: unbalanced, -- Epoch: 48, Loss: 6.906951529693604\n",
+      "Model: unbalanced, -- Epoch: 49, Loss: 6.906831745910645\n"
      ]
     }
    ],
    "source": [
     "for i in range(EPOCHS):\n",
-    "    train(i, vae1,opt1, \"UNBALANCED\" ,train_data)"
+    "    train(i, vae1,opt1, \"unbalanced\", train_data)"
    ]
   },
   {
@@ -377,56 +377,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: BALANCED, -- Epoch: 0, Loss: 7.4548715995788575\n",
-      "Model: BALANCED, -- Epoch: 1, Loss: 7.1748945426940915\n",
-      "Model: BALANCED, -- Epoch: 2, Loss: 7.140568058776855\n",
-      "Model: BALANCED, -- Epoch: 3, Loss: 7.1374248664855955\n",
-      "Model: BALANCED, -- Epoch: 4, Loss: 7.136184799194336\n",
-      "Model: BALANCED, -- Epoch: 5, Loss: 7.1337896484375\n",
-      "Model: BALANCED, -- Epoch: 6, Loss: 7.133171437835693\n",
-      "Model: BALANCED, -- Epoch: 7, Loss: 7.132244361114502\n",
-      "Model: BALANCED, -- Epoch: 8, Loss: 7.13121549911499\n",
-      "Model: BALANCED, -- Epoch: 9, Loss: 7.131345344543457\n",
-      "Model: BALANCED, -- Epoch: 10, Loss: 7.131425001525879\n",
-      "Model: BALANCED, -- Epoch: 11, Loss: 7.130459814453125\n",
-      "Model: BALANCED, -- Epoch: 12, Loss: 7.131272277069092\n",
-      "Model: BALANCED, -- Epoch: 13, Loss: 7.131438201904297\n",
-      "Model: BALANCED, -- Epoch: 14, Loss: 7.130693005371094\n",
-      "Model: BALANCED, -- Epoch: 15, Loss: 7.130765522003174\n",
-      "Model: BALANCED, -- Epoch: 16, Loss: 7.130718148803711\n",
-      "Model: BALANCED, -- Epoch: 17, Loss: 7.130677533721924\n",
-      "Model: BALANCED, -- Epoch: 18, Loss: 7.130294078826904\n",
-      "Model: BALANCED, -- Epoch: 19, Loss: 7.1306713142395015\n",
-      "Model: BALANCED, -- Epoch: 20, Loss: 7.130894915008545\n",
-      "Model: BALANCED, -- Epoch: 21, Loss: 7.130761313629151\n",
-      "Model: BALANCED, -- Epoch: 22, Loss: 7.1306981895446775\n",
-      "Model: BALANCED, -- Epoch: 23, Loss: 7.130702402496338\n",
-      "Model: BALANCED, -- Epoch: 24, Loss: 7.130977764129638\n",
-      "Model: BALANCED, -- Epoch: 25, Loss: 7.130810242462158\n",
-      "Model: BALANCED, -- Epoch: 26, Loss: 7.130821863555909\n",
-      "Model: BALANCED, -- Epoch: 27, Loss: 7.130618161010742\n",
-      "Model: BALANCED, -- Epoch: 28, Loss: 7.130567491912842\n",
-      "Model: BALANCED, -- Epoch: 29, Loss: 7.130689307403564\n",
-      "Model: BALANCED, -- Epoch: 30, Loss: 7.130605889892578\n",
-      "Model: BALANCED, -- Epoch: 31, Loss: 7.130417683410645\n",
-      "Model: BALANCED, -- Epoch: 32, Loss: 7.130619384765625\n",
-      "Model: BALANCED, -- Epoch: 33, Loss: 7.130306628417968\n",
-      "Model: BALANCED, -- Epoch: 34, Loss: 7.130284212493897\n",
-      "Model: BALANCED, -- Epoch: 35, Loss: 7.1305052757263185\n",
-      "Model: BALANCED, -- Epoch: 36, Loss: 7.1306154243469235\n",
-      "Model: BALANCED, -- Epoch: 37, Loss: 7.13018656539917\n",
-      "Model: BALANCED, -- Epoch: 38, Loss: 7.130604822540283\n",
-      "Model: BALANCED, -- Epoch: 39, Loss: 7.130542916870117\n",
-      "Model: BALANCED, -- Epoch: 40, Loss: 7.130415696716309\n",
-      "Model: BALANCED, -- Epoch: 41, Loss: 7.130047090911865\n",
-      "Model: BALANCED, -- Epoch: 42, Loss: 7.130158548736572\n",
-      "Model: BALANCED, -- Epoch: 43, Loss: 7.129924070739746\n",
-      "Model: BALANCED, -- Epoch: 44, Loss: 7.130196916198731\n",
-      "Model: BALANCED, -- Epoch: 45, Loss: 7.130795628356934\n",
-      "Model: BALANCED, -- Epoch: 46, Loss: 7.130484714508056\n",
-      "Model: BALANCED, -- Epoch: 47, Loss: 7.130195138549805\n",
-      "Model: BALANCED, -- Epoch: 48, Loss: 7.13028589477539\n",
-      "Model: BALANCED, -- Epoch: 49, Loss: 7.130267107391357\n"
+      "Model: BALANCED, -- Epoch: 0, Loss: 7.438056751251221\n",
+      "Model: BALANCED, -- Epoch: 1, Loss: 7.1651578086853025\n",
+      "Model: BALANCED, -- Epoch: 2, Loss: 7.137047064971924\n",
+      "Model: BALANCED, -- Epoch: 3, Loss: 7.135009495544433\n",
+      "Model: BALANCED, -- Epoch: 4, Loss: 7.134438373565674\n",
+      "Model: BALANCED, -- Epoch: 5, Loss: 7.13315479812622\n",
+      "Model: BALANCED, -- Epoch: 6, Loss: 7.133009128570556\n",
+      "Model: BALANCED, -- Epoch: 7, Loss: 7.132214530944824\n",
+      "Model: BALANCED, -- Epoch: 8, Loss: 7.1319966506958\n",
+      "Model: BALANCED, -- Epoch: 9, Loss: 7.1318255798339845\n",
+      "Model: BALANCED, -- Epoch: 10, Loss: 7.131130234527588\n",
+      "Model: BALANCED, -- Epoch: 11, Loss: 7.130946277618408\n",
+      "Model: BALANCED, -- Epoch: 12, Loss: 7.130598165130615\n",
+      "Model: BALANCED, -- Epoch: 13, Loss: 7.131013581085205\n",
+      "Model: BALANCED, -- Epoch: 14, Loss: 7.13055094833374\n",
+      "Model: BALANCED, -- Epoch: 15, Loss: 7.13067723236084\n",
+      "Model: BALANCED, -- Epoch: 16, Loss: 7.131047536468506\n",
+      "Model: BALANCED, -- Epoch: 17, Loss: 7.1306559875488285\n",
+      "Model: BALANCED, -- Epoch: 18, Loss: 7.13079407043457\n",
+      "Model: BALANCED, -- Epoch: 19, Loss: 7.130257804870605\n",
+      "Model: BALANCED, -- Epoch: 20, Loss: 7.130351265716553\n",
+      "Model: BALANCED, -- Epoch: 21, Loss: 7.130912596130371\n",
+      "Model: BALANCED, -- Epoch: 22, Loss: 7.130457698822021\n",
+      "Model: BALANCED, -- Epoch: 23, Loss: 7.129978849029541\n",
+      "Model: BALANCED, -- Epoch: 24, Loss: 7.130397229003906\n",
+      "Model: BALANCED, -- Epoch: 25, Loss: 7.130663804626465\n",
+      "Model: BALANCED, -- Epoch: 26, Loss: 7.130607841491699\n",
+      "Model: BALANCED, -- Epoch: 27, Loss: 7.130576306152344\n",
+      "Model: BALANCED, -- Epoch: 28, Loss: 7.130290972137451\n",
+      "Model: BALANCED, -- Epoch: 29, Loss: 7.129820069122315\n",
+      "Model: BALANCED, -- Epoch: 30, Loss: 7.1299250663757325\n",
+      "Model: BALANCED, -- Epoch: 31, Loss: 7.13023918762207\n",
+      "Model: BALANCED, -- Epoch: 32, Loss: 7.130262970733643\n",
+      "Model: BALANCED, -- Epoch: 33, Loss: 7.130298302459717\n",
+      "Model: BALANCED, -- Epoch: 34, Loss: 7.131038285064697\n",
+      "Model: BALANCED, -- Epoch: 35, Loss: 7.130502401733398\n",
+      "Model: BALANCED, -- Epoch: 36, Loss: 7.130215662384034\n",
+      "Model: BALANCED, -- Epoch: 37, Loss: 7.130618954467773\n",
+      "Model: BALANCED, -- Epoch: 38, Loss: 7.13047227859497\n",
+      "Model: BALANCED, -- Epoch: 39, Loss: 7.1308315696716305\n",
+      "Model: BALANCED, -- Epoch: 40, Loss: 7.130008227539062\n",
+      "Model: BALANCED, -- Epoch: 41, Loss: 7.130407288360596\n",
+      "Model: BALANCED, -- Epoch: 42, Loss: 7.130171263122558\n",
+      "Model: BALANCED, -- Epoch: 43, Loss: 7.130473448944092\n",
+      "Model: BALANCED, -- Epoch: 44, Loss: 7.13049789352417\n",
+      "Model: BALANCED, -- Epoch: 45, Loss: 7.130585398101807\n",
+      "Model: BALANCED, -- Epoch: 46, Loss: 7.130372497558594\n",
+      "Model: BALANCED, -- Epoch: 47, Loss: 7.130447806549072\n",
+      "Model: BALANCED, -- Epoch: 48, Loss: 7.130503045654297\n",
+      "Model: BALANCED, -- Epoch: 49, Loss: 7.130168505096435\n"
      ]
     }
    ],
@@ -485,7 +485,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(0.1642, device='cuda:0', grad_fn=<SelectBackward>)"
+       "tensor(0.1688, device='cuda:0', grad_fn=<SelectBackward>)"
       ]
      },
      "execution_count": 20,
@@ -505,7 +505,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(0.4858, device='cuda:0', grad_fn=<SelectBackward>)"
+       "tensor(0.4873, device='cuda:0', grad_fn=<SelectBackward>)"
       ]
      },
      "execution_count": 21,
@@ -545,7 +545,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(0.1999, device='cuda:0', grad_fn=<SelectBackward>)"
+       "tensor(0.1793, device='cuda:0', grad_fn=<SelectBackward>)"
       ]
      },
      "execution_count": 23,
@@ -565,7 +565,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(0.4780, device='cuda:0', grad_fn=<SelectBackward>)"
+       "tensor(0.4883, device='cuda:0', grad_fn=<SelectBackward>)"
       ]
      },
      "execution_count": 24,
@@ -607,7 +607,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17.560000000000002\n"
+      "17.88\n"
      ]
     }
    ],
@@ -627,7 +627,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(0.4845, device='cuda:0', grad_fn=<SelectBackward>)"
+       "tensor(0.5109, device='cuda:0', grad_fn=<SelectBackward>)"
       ]
      },
      "execution_count": 27,
@@ -647,7 +647,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(0.5124, device='cuda:0', grad_fn=<SelectBackward>)"
+       "tensor(0.4884, device='cuda:0', grad_fn=<SelectBackward>)"
       ]
      },
      "execution_count": 28,
@@ -694,10 +694,10 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0.5001, 0.5005, 0.4992, 0.5001, 0.4954, 0.5004, 0.5019, 0.4914, 0.5121,\n",
-       "         0.0463, 0.5618],\n",
-       "        [0.5010, 0.5006, 0.5006, 0.5001, 0.5000, 0.5007, 0.5015, 0.4947, 0.5067,\n",
-       "         0.0523, 0.4876]], device='cuda:0', grad_fn=<SigmoidBackward>)"
+       "tensor([[0.5003, 0.5002, 0.4999, 0.5002, 0.4848, 0.4995, 0.5006, 0.4984, 0.5017,\n",
+       "         0.0502, 0.4819],\n",
+       "        [0.5005, 0.5006, 0.5001, 0.4995, 0.4861, 0.4991, 0.4998, 0.4983, 0.5008,\n",
+       "         0.0502, 0.4883]], device='cuda:0', grad_fn=<SigmoidBackward>)"
       ]
      },
      "execution_count": 32,
@@ -719,7 +719,7 @@
      "output_type": "stream",
      "text": [
       "UNBALANCED DATASET\n",
-      "counts of intervals: [0, 0.1]: 8438, [0.1, 0.7]: 1562, [0.7, 1]: 0\n",
+      "counts of intervals: [0, 0.1]: 9788, [0.1, 0.7]: 212, [0.7, 1]: 0\n",
       "-- so the ratio to done and not done (deleting the middle ones) is 0.0\n",
       "The real ration is 0.1768\n"
      ]
@@ -735,7 +735,7 @@
     "    k.append(num)\n",
     "    if num < 0.2:\n",
     "        res[0] += 1\n",
-    "    elif num <0.5:\n",
+    "    elif num <0.7:\n",
     "        res[1] += 1\n",
     "    else:\n",
     "        res[2] += 1\n",
@@ -819,7 +819,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(0.1688, device='cuda:0', grad_fn=<SelectBackward>)"
+       "tensor(0.1690, device='cuda:0', grad_fn=<SelectBackward>)"
       ]
      },
      "execution_count": 36,
