--- a/experimentation/vae/data_collection.ipynb
+++ b/experimentation/vae/data_collection.ipynb
@@ -20,7 +20,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.00141413, -0.0011006 ,  0.00491055, -0.00380654])"
+       "array([-0.00149742, -0.00667878,  0.00242225,  0.00700536])"
       ]
      },
      "execution_count": 2,
@@ -40,8 +40,7 @@
    "outputs": [],
    "source": [
     "AMOUNT = 100000\n",
-    "DONE_HACK = 2\n",
-    "FILE_NAME = f\"testing{DONE_HACK}.npy\""
+    "FILE_NAME = f\"testing.npy\""
    ]
   },
   {
@@ -62,8 +61,8 @@
     "action_dim = env.action_space.shape[0] \n",
     "action_low = env.action_space.low[0]\n",
     "action_high = env.action_space.high[0]\n",
-    "state_low = -10\n",
-    "state_high = 10\n",
+    "state_low = -10.0\n",
+    "state_high = 10.0\n",
     "print(action_dim)\n",
     "# print(state_low)\n",
     "def normalize_action(x):\n",
@@ -87,14 +86,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100000/100000 [00:13<00:00, 7304.73it/s]"
+      "100%|██████████| 100000/100000 [00:12<00:00, 7731.87it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17477\n"
+      "17609\n"
      ]
     },
     {
@@ -113,7 +112,8 @@
     "for i in tqdm(range(AMOUNT)):\n",
     "    a = env.action_space.sample()\n",
     "    s, r, d, _ = env.step(a)\n",
-    "    raw.append(np.concatenate((normalize_state(old_state), normalize_action(a), normalize_state(s), normalize_reward(r), [d for i in range(DONE_HACK)])))\n",
+    "    raw.append(np.concatenate((normalize_state(old_state), normalize_action(a), normalize_state(s), normalize_reward(r), [d])))\n",
+    "    old_state = s\n",
     "    if d:\n",
     "        dones += 1\n",
     "        old_state = env.reset()\n",
@@ -133,9 +133,9 @@
     {
      "data": {
       "text/plain": [
-       "array([0.49977055, 0.49999578, 0.49998657, 0.49951733, 0.684829  ,\n",
-       "       0.50241351, 0.49674004, 0.5316987 , 0.44357807, 0.05      ,\n",
-       "       0.        , 0.        ])"
+       "array([0.50037715, 0.49890415, 0.51859191, 0.45712375, 0.78009874,\n",
+       "       0.50173244, 0.49578274, 0.54909031, 0.38730875, 0.05      ,\n",
+       "       0.        ])"
       ]
      },
      "execution_count": 6,
@@ -167,24 +167,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.49977055, 0.49999578, 0.49998657, 0.49951733, 0.684829  ,\n",
-       "       0.50241351, 0.49674004, 0.5316987 , 0.44357807, 0.05      ,\n",
-       "       0.        , 0.        ])"
+       "array([0.50093858, 0.49858056, 0.5276213 , 0.43750722, 0.12525876,\n",
+       "       0.50121063, 0.49807053, 0.48616404, 0.53541019, 0.05      ,\n",
+       "       0.        ])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "saved[345]"
+    "saved[402]"
    ]
   },
   {
@@ -204,8 +204,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([0.4998, 0.5000, 0.5000, 0.4995, 0.6848, 0.5024, 0.4967, 0.5317, 0.4436,\n",
-       "        0.0500, 0.0000, 0.0000])"
+       "tensor([0.5004, 0.4989, 0.5186, 0.4571, 0.7801, 0.5017, 0.4958, 0.5491, 0.3873,\n",
+       "        0.0500, 0.0000])"
       ]
      },
      "execution_count": 11,
@@ -248,7 +248,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100000/100000 [00:00<00:00, 113967.23it/s]\n"
+      "100%|██████████| 100000/100000 [00:00<00:00, 112312.90it/s]\n"
      ]
     }
    ],
